--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "task-manager",
+  "name": "task_manager_api",
   "version": "1.0.0",
-  "description": "Assignment 1 for backend engineering launchpad",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "pretest": "node -e \"if (process.version.slice(1).split('.')[0] < 18) { console.error('Unsupported Node.js version, please use version 18'); process.exit(1); }\"",
-    "test": "tap test/*.js --disable-coverage"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
-  "author": "Airtribe",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "supertest": "^6.3.4",
-    "tap": "^18.6.1"
-  },
+  "type": "commonjs",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">= 18.0.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11"
   }
 }
